src/test/deca/context/invalid/intermediaire2/mots_reserves/09readInt.deca
// Description:
// Test du mettre le mot réservé readInt, en nom de variable.
//
// Resultats:
//  09readInt.deca:10:8:
//
// Historique:
//    crée le 17/06/2022
{
    int readInt;
}